--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="main">
+    <section class="awsome">
       <div class="container">
         <h2 class="title">Why this so awsome</h2>
         <div class="line"></div>
@@ -19,7 +19,7 @@
         <div class="card">
           <div сlass="card__content">
             <div class="card__img">
-              <img src="./img/lamp.jpg" alt="lamp" />
+              <img src="./img/lamp.png" alt="lamp" />
             </div>
               <h3 class="card__title">Thoughtful design</h3>
               <div class="card__text">
@@ -31,7 +31,7 @@
               </div>
           </div>
         </div>
-        <div class="card">
+        <div class="main__wrap">
             <div сlass="card__content">
               <div class="card__img">
                 <img src="./img/keyboard.png" alt="keyboard" />
@@ -62,18 +62,5 @@
           </div>
       </div>
     </section>
-    <!-- <section class="pricing">
-      <div class="container">
-        <div class="pricing__wrap">
-          <h2 class="title">
-            Pricing options
-          </h2>
-          <div class="line"></div>
-          <div class="text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </div>
-      </div>
-    </section> -->
   </body>
 </html>
