--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
       </div>
     </section>
-    <!-- <section class="pricing">
+    <section class="pricing">
       <div class="container">
         <div class="pricing__wrap">
           <h2 class="title">
@@ -72,8 +72,43 @@
           <div class="text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
+          <div class="wrap__list">
+          <ul class="list">
+            <li class="list__item--tarif">Basic</li>
+            <li class="list__item--coast">$10</li>
+            <li class="list__item--free">Free for life</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+          </ul>
+          <ul class="list">
+            <li class="list__item--tarif">Optima</li>
+            <li class="list__item--coast">$20</li>
+            <li class="list__item--free">Free for life</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+          </ul>
+          <ul class="list"> 
+            <li class="list__item--tarif">Pro</li>
+            <li class="list__item--coast">$30</li>
+            <li class="list__item--free">Free for life</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+            <li class="list__item--space">1 gb of space</li>
+          </ul> 
+        </div>
         </div>
       </div>
-    </section> -->
+    </section>
   </body>
 </html>
