--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="wrap__list">
           <ul class="list">
             <li class="list__item--tarif">Basic</li>
-            <li class="list__item--coast">$10</li>
+            <li class="list__item--cost">$10</li>
             <li class="list__item--free">Free for life</li>
             <li class="list__item--space">1 gb of space</li>
             <li class="list__item--space">1 gb of space</li>
@@ -86,7 +86,7 @@
           </ul>
           <ul class="list">
             <li class="list__item--tarif">Optima</li>
-            <li class="list__item--coast">$20</li>
+            <li class="list__item--cost">$20</li>
             <li class="list__item--free">Free for life</li>
             <li class="list__item--space">1 gb of space</li>
             <li class="list__item--space">1 gb of space</li>
@@ -97,7 +97,7 @@
           </ul>
           <ul class="list"> 
             <li class="list__item--tarif">Pro</li>
-            <li class="list__item--coast">$30</li>
+            <li class="list__item--cost">$30</li>
             <li class="list__item--free">Free for life</li>
             <li class="list__item--space">1 gb of space</li>
             <li class="list__item--space">1 gb of space</li>
