--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
     </section>
     <section class="pricing">
       <div class="container">
-        <div class="pricing__wrap">
           <h2 class="title">
             Pricing options
           </h2>
@@ -107,6 +106,30 @@
             <li class="list__item--space">1 gb of space</li>
           </ul>    
         </div>
+      </div>
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <h2 class="title">
+          what our customers are saying
+        </h2>
+        <div class="line"></div>
+        <div class="text">
+          <p>ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+      </div>
+      <div class="wrap__reviews">
+        <div class="reviews__card">
+          <div class="text__reviews">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
+            </p>
+          </div>
+          <h3 class="title__reviews">
+            Jeremy H.
+          </h3>
+          <div class="card__img">
+            <img src="#" alt="#">
+          </div>
         </div>
       </div>
     </section>
