add section axure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <section class="main">
       <div class="container">
         <h2 class="title">Why this so awsome</h2>
-        <div class="line"></div>
         <div class="text">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
@@ -113,24 +112,21 @@
         <h2 class="title">
           what our customers are saying
         </h2>
-        <div class="line"></div>
         <div class="text">
           <p>ipsum dolor sit amet, consectetur adipiscing elit.</p> 
       </div>
       <div class="wrap__reviews">
         <div class="reviews__card">
-          <div class="text__reviews">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex, architecto eaque quo suscipit.
-            </p>
-          </div>
-          <h3 class="title__reviews">
-            Jeremy H.
-          </h3>
-          <div class="card__img">
-            <img src="#" alt="#">
-          </div>
+          
         </div>
+      </div>
+    </section>
+    <section class="axure">
+      <div class="container">
+        <h2 class="title__axure">Stylish axure design</h2>
+        <div class="text__axure">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
+        </div>
+        <a href="https://webref.ru/recipe/2317" class="btn">Download</a>
       </div>
     </section>
   </body>
