--- a/index.html
+++ b/index.html
@@ -116,8 +116,59 @@
           <p>ipsum dolor sit amet, consectetur adipiscing elit.</p> 
       </div>
       <div class="wrap__reviews">
-        <div class="reviews__card">
-          
+        <div class="reviews__card"> 
+          <div class="reviews__text">
+            <p>Lorem ipsum dolor sit amet, 
+              consectetur adipisicing elit. Doloribus 
+              accusamus expedita repellat similique 
+              odio aspernatur ex, architecto eaque 
+              quo suscipit.</p>
+          </div>
+          <div class="reviews__description">
+            <div class="reviews__img">
+              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+            </div>
+            <div class="descriptoin">
+              <span class="name">Jeremy H.</span>
+              <span class="profession">Manager</span>
+            </div>
+          </div>
+        </div>
+        <div class="reviews__card"> 
+          <div class="reviews__text">
+            <p>Lorem ipsum dolor sit amet, 
+              consectetur adipisicing elit. Doloribus 
+              accusamus expedita repellat similique 
+              odio aspernatur ex, architecto eaque 
+              quo suscipit.</p>
+          </div>
+          <div class="reviews__description">
+            <div class="reviews__img">
+              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+            </div>
+            <div class="descriptoin">
+              <span class="name">Jeremy H.</span>
+              <span class="profession">Manager</span>
+            </div>
+          </div>
+        </div>
+        <div class="reviews__card"> 
+          <div class="reviews__text">
+            <p>Lorem ipsum dolor sit amet, 
+              consectetur adipisicing elit. Doloribus 
+              accusamus expedita repellat similique 
+              odio aspernatur ex, architecto eaque 
+              quo suscipit.</p>
+          </div>
+          <div class="reviews__description">
+            <div class="reviews__img">
+              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+            </div>
+            <div class="descriptoin">
+              <span class="name">Jeremy H.</span>
+              <span class="profession">Manager</span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
