change all sections

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="card">
           <div сlass="card__content">
             <div class="card__img">
-              <img src="./img/lamp.jpg" alt="lamp" />
+              <img src="./img/lamp.png" alt="lamp" />
             </div>
               <h3 class="card__title">Thoughtful design</h3>
               <div class="card__text">
@@ -112,10 +112,11 @@
           what our customers are saying
         </h2>
         <div class="text">
-          <p>ipsum dolor sit amet, consectetur adipiscing elit.</p> 
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> 
       </div>
       <div class="wrap__reviews">
         <div class="reviews__card"> 
+          <div class="wrap__reviews__text">
           <div class="reviews__text">
             <p>Lorem ipsum dolor sit amet, 
               consectetur adipisicing elit. Doloribus 
@@ -123,6 +124,7 @@
               odio aspernatur ex, architecto eaque 
               quo suscipit.</p>
           </div>
+        </div>
           <div class="reviews__description">
             <div class="reviews__img">
               <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
@@ -134,6 +136,7 @@
           </div>
         </div>
         <div class="reviews__card"> 
+          <div class="wrap__reviews__text">
           <div class="reviews__text">
             <p>Lorem ipsum dolor sit amet, 
               consectetur adipisicing elit. Doloribus 
@@ -141,6 +144,7 @@
               odio aspernatur ex, architecto eaque 
               quo suscipit.</p>
           </div>
+        </div>
           <div class="reviews__description">
             <div class="reviews__img">
               <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
@@ -151,14 +155,16 @@
             </div>
           </div>
         </div>
-        <div class="reviews__card"> 
+        <div class="reviews__card">  
+          <div class="wrap__reviews__text">
           <div class="reviews__text">
             <p>Lorem ipsum dolor sit amet, 
               consectetur adipisicing elit. Doloribus 
               accusamus expedita repellat similique 
               odio aspernatur ex, architecto eaque 
               quo suscipit.</p>
-          </div>
+          </div> 
+        </div>
           <div class="reviews__description">
             <div class="reviews__img">
               <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
@@ -168,7 +174,7 @@
               <span class="profession">Manager</span>
             </div>
           </div>
-        </div>
+        </div> 
       </div>
     </section>
     <section class="axure">
