change all sectins

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
   </head>
   <body>
+    <header class="axit">
+      <div class="container">
+        <div class="wrap">
+          <span class="head">AXIT</span>
+          <nav class="navigation"></nav>
+        </div>
+      </div>
+    </header>
+    </header>
     <section class="main">
       <div class="container">
         <h2 class="title">Why this so awsome</h2>
@@ -116,7 +125,6 @@
       </div>
       <div class="wrap__reviews">
         <div class="reviews__card"> 
-          <div class="wrap__reviews__text">
           <div class="reviews__text">
             <p>Lorem ipsum dolor sit amet, 
               consectetur adipisicing elit. Doloribus 
@@ -124,7 +132,6 @@
               odio aspernatur ex, architecto eaque 
               quo suscipit.</p>
           </div>
-        </div>
           <div class="reviews__description">
             <div class="reviews__img">
               <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
@@ -147,7 +154,7 @@
         </div>
           <div class="reviews__description">
             <div class="reviews__img">
-              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+              <img src="../FE36-Landing-Kuksa-Anastasiya/img/flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
             </div>
             <div class="descriptoin">
               <span class="name">Jeremy H.</span>
