add header media footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>Document</title>
   </head>
   <body>
+    <section class="axit">
+      <div class="container">
+        <div class="axit__wrap">
+          <div class="logo">
+            <span class="ax">Ax</span>
+            <span class="it">It</span></div>
+          <ul class="navigation__list">
+            <li class="navigation__list--item" ><a href="https://www.collinsdictionary.com/dictionary/english/feature" class="feautures">feautures</a></li> 
+            <li class="navigation__list--item"><a href="https://www.merriam-webster.com/dictionary/about" class="abour">about</a></li>
+            <li class="navigation__list--item"><a href="https://en.wikipedia.org/wiki/Pricing">pricing</a></li>
+            <li class="navigation__list--item"><a href="https://support.google.com/business/answer/3474122?hl=en">reviews</a></li>
+            <li class="navigation__list--item"><a href="#">contact</a></li>
+          </ul>
+        </div>
+        </div>
+      </div>
+    </section>
     <section class="main">
       <div class="container">
         <h2 class="title">Why this so awsome</h2>
@@ -59,6 +76,27 @@
                 </div>
             </div>
           </div>
+      </div>
+    </section>
+    <section class="media">
+      <div class="container">
+        <div class="media__wrap">
+          <div class="media__wrap__title">
+            <h2 class="media__title">Social Media</h2>
+            <p class="media__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+          </div>
+          <nav class="navigation__media">
+            <ul class="media__icons">
+              <li class="facebook"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+              </li>
+              <li class="twitter"><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
+              <li class="googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><i class="fa-brands fa-google-plus-g"></i></a></li>
+              <li class="instagram"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+              <li class="rss"><a href="http://byfly.by/wifi"><i class="fa-solid fa-rss"></i></a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
       </div>
     </section>
     <section class="pricing">
@@ -183,6 +221,22 @@
         <a href="https://webref.ru/recipe/2317" class="btn">Download</a>
       </div>
     </section>
-
+    <footer class="social__medias">
+      <div class="container">
+        <nav class="social__icons">
+          <ul class="social__icons__list">
+            <li class="footer__facebook"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li class="twitter"><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
+            <li class="googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><i class="fa-brands fa-google-plus-g"></i></a></li>
+            <li class="instagram"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+            <li class="rss"><a href="http://byfly.by/wifi"><i class="fa-solid fa-rss"></i></a></li>
+          </ul>
+          <div class="copy">
+            <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/nav"><i class="fa-solid fa-copyright">2022 axure themes</i></a>
+          </div>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
