add contact section and avit section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="axit">
+    <section class="header">
       <div class="container">
-        <div class="axit__wrap">
+        <div class="header__wrap">
           <div class="logo">
-            <span class="ax">Ax</span>
-            <span class="it">It</span></div>
+            <span class="ax">Ax <span class="it">It</span></span>
+            </div>
           <ul class="navigation__list">
             <li class="navigation__list--item" ><a href="https://www.collinsdictionary.com/dictionary/english/feature" class="feautures">feautures</a></li> 
             <li class="navigation__list--item"><a href="https://www.merriam-webster.com/dictionary/about" class="abour">about</a></li>
@@ -22,6 +22,38 @@
             <li class="navigation__list--item"><a href="#">contact</a></li>
           </ul>
         </div>
+        </div>
+      </div>
+    </section>
+    <section class="axit">
+      <div class="container">
+        <div class="axit__wrap">
+          <div class="axit__modern__wrap">
+            <h1 class="axit__title">Modern axure template for beautifull prototypes</h1>
+            <div class="axit__text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit aperiam. 
+              </p>
+            </div>
+            <button type="button" class="modern__btn">Download</button>
+          </div>
+            <div name="axit__content" class="free__wrap__content">
+              <form name="content__item" class="content">
+                <h3 class="content__title">Try your <span class="one__word">Free</span> trial Today</h3>
+                <div class="wrap__user__name">
+                  <label for="userName" class="user__name">Name</label>
+                  <input type="text" name="userName" required maxlength="15" minlength="8" id="userName">
+                </div >
+                  <div class="wrap__user__mail"> <label for="userEmail" class="user__email">Email</label>
+                  <input type="email" name="userEmail" required id="userEmail">
+                  </div>
+                 <div class="wrap__user__password">
+                  <label for="text__user__password" class="user__password">Password</label>
+                  <input type="password" name="userPassword" required id="text__user__password">
+                </div>
+            </form>
+              <button type="button" class="axit__button">Get started</button>
+            </div>
         </div>
       </div>
     </section>
@@ -87,12 +119,12 @@
           </div>
           <nav class="navigation__media">
             <ul class="media__icons">
-              <li class="facebook"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+              <li class="facebook"><a href="https://www.facebook.com/"><g class="fa-brands fa-facebook-f media-facebook"></g></a>
               </li>
-              <li class="twitter"><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
-              <li class="googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><i class="fa-brands fa-google-plus-g"></i></a></li>
-              <li class="instagram"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
-              <li class="rss"><a href="http://byfly.by/wifi"><i class="fa-solid fa-rss"></i></a></li>
+              <li class="twitter"><a href="https://twitter.com/"><g class="fa-brands fa-twitter media-twitter"></g></a></li>
+              <li class="googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><g class="fa-brands fa-google-plus-g media-google"></g></a></li>
+              <li class="instagram"><a href="https://www.instagram.com/"><g class="fa-brands fa-instagram media-instagram"></g></a></li>
+              <li class="rss"><a href="http://byfly.by/wifi"><g class="fa-solid fa-rss media-rss"><g/></a></li>
             </ul>
           </nav>
         </div>
@@ -221,20 +253,56 @@
         <a href="https://webref.ru/recipe/2317" class="btn">Download</a>
       </div>
     </section>
+    <section class="contact">
+      <div class="container">
+        <h2 class="title">contact us</h2>
+        <div class="text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </p>
+        </div>
+        <div class="wrap__contactUs">
+          <form class="contactUs__content">
+            <div class="left__content">
+              <div class="content__user__name">
+                <label for="contactUserName" class="contact__user__name">Name</label>
+                <input type="text" name="UserName" required maxlength="15" minlength="8" id="contactUserName">
+              </div >
+                <div class="content__user__email"> 
+                  <label for="userEmail" class="contact__user__email">Email</label>
+                <input type="email" name="userEmail" required id="contactUserEmail">
+                </div>
+               <div class="content__user__password">
+                <label for="contact__user__password" class="contact__user__password">Password</label>
+                <input type="password" name="userPassword" required id="contact__user__password">
+              </div>
+            </div>
+            <div class="right__content">
+              <div class="content__textarea">
+                <label for="text__label__textarea" class="label__textarea">Message</label>
+                <textarea name="textarea__contact" id="text__label__textarea"></textarea>
+              </div>
+            </div>
+          </form>
+          <button type="submit" class="btn__contact">Send message</button>
+        </div>
+      </div>
+    </section>
     <footer class="social__medias">
       <div class="container">
         <nav class="social__icons">
           <ul class="social__icons__list">
-            <li class="footer__facebook"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+            <li class="facebook"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f footer-facebook"></i></a>
             </li>
-            <li class="twitter"><a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a></li>
-            <li class="googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><i class="fa-brands fa-google-plus-g"></i></a></li>
-            <li class="instagram"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
-            <li class="rss"><a href="http://byfly.by/wifi"><i class="fa-solid fa-rss"></i></a></li>
+            <li class="footer__twitter"><a href="https://twitter.com/"><i class="fa-brands fa-twitter footer-twitter" ></i></a></li>
+            <li class="footer__googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><i class="fa-brands fa-google-plus-g footer-google"></i></a></li>
+            <li class="footer__instagram"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram footer-instagram"></i></a></li>
+            <li class="footer__rss"><a href="http://byfly.by/wifi"><i class="fa-solid fa-rss footer-rss"></i></a></li>
           </ul>
-          <div class="copy">
-            <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/nav"><i class="fa-solid fa-copyright">2022 axure themes</i></a>
+          <div class="footer__discription">
+            <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/nav" class="footer__discription__item"><i class="fa-solid fa-copyright">2022 Axure Themes</i></a>
           </div>
+          
         </nav>
       </div>
     </footer>
