--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             </div>
             <button type="button" class="modern__btn">Download</button>
           </div>
-            <div name="axit__content" class="free__wrap__content">
-              <form name="content__item" class="content">
-                <h3 class="content__title">Try your <span class="one__word">Free</span> trial Today</h3>
+            <div  class="free__wrap__content">
+              <form name="axit__content" class="free__content">
+                <div class="content">
+                  <h3 class="content__title">Try your <span class="one__word">Free</span> trial Today</h3>
                 <div class="wrap__user__name">
                   <label for="userName" class="user__name">Name</label>
                   <input type="text" name="userName" required maxlength="15" minlength="8" id="userName">
@@ -51,8 +52,9 @@
                   <label for="text__user__password" class="user__password">Password</label>
                   <input type="password" name="userPassword" required id="text__user__password">
                 </div>
+                </div>
+                <button type="button" class="axit__button">Get started</button>
             </form>
-              <button type="button" class="axit__button">Get started</button>
             </div>
         </div>
       </div>
@@ -119,12 +121,12 @@
           </div>
           <nav class="navigation__media">
             <ul class="media__icons">
-              <li class="facebook"><a href="https://www.facebook.com/"><g class="fa-brands fa-facebook-f media-facebook"></g></a>
+              <li class="facebook"><a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f media-facebook"></i></a>
               </li>
-              <li class="twitter"><a href="https://twitter.com/"><g class="fa-brands fa-twitter media-twitter"></g></a></li>
-              <li class="googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><g class="fa-brands fa-google-plus-g media-google"></g></a></li>
-              <li class="instagram"><a href="https://www.instagram.com/"><g class="fa-brands fa-instagram media-instagram"></g></a></li>
-              <li class="rss"><a href="http://byfly.by/wifi"><g class="fa-solid fa-rss media-rss"><g/></a></li>
+              <li class="twitter"><a href="https://twitter.com/"><i class="fa-brands fa-twitter media-twitter"></i></a></li>
+              <li class="googleplus"><a href="https://ru.wikipedia.org/wiki/Google%2B"><i class="fa-brands fa-google-plus-g media-google"></i></a></li>
+              <li class="instagram"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram media-instagram"></i></a></li>
+              <li class="rss"><a href="http://byfly.by/wifi"><i class="fa-solid fa-rss media-rss"></i></a></li>
             </ul>
           </nav>
         </div>
@@ -195,7 +197,7 @@
           </div>
           <div class="reviews__description">
             <div class="reviews__img">
-              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+              <img src="../FE36-Landing-Kuksa-Anastasiya/img/alex-au-yang-vHN-d_oq2WY-unsplash.jpg" alt="img">
             </div>
             <div class="descriptoin">
               <span class="name">Jeremy H.</span>
@@ -215,7 +217,7 @@
         </div>
           <div class="reviews__description">
             <div class="reviews__img">
-              <img src="../FE36-Landing-Kuksa-Anastasiya/img/flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+              <img src="../FE36-Landing-Kuksa-Anastasiya/img/alex-au-yang-vHN-d_oq2WY-unsplash.jpg" alt="img">
             </div>
             <div class="descriptoin">
               <span class="name">Jeremy H.</span>
@@ -235,7 +237,7 @@
         </div>
           <div class="reviews__description">
             <div class="reviews__img">
-              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+              <img src="../FE36-Landing-Kuksa-Anastasiya/img/alex-au-yang-vHN-d_oq2WY-unsplash.jpg" alt="img">
             </div>
             <div class="descriptoin">
               <span class="name">Jeremy H.</span>
