--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
           <div class="reviews__description">
             <div class="reviews__img">
-              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+              <img src="../FE36-Landing-Kuksa-Anastasiya/img/alex-au-yang-vHN-d_oq2WY-unsplash.jpg" alt="img">
             </div>
             <div class="descriptoin">
               <span class="name">Jeremy H.</span>
@@ -145,7 +145,7 @@
         </div>
           <div class="reviews__description">
             <div class="reviews__img">
-              <img src="../FE36-Landing-Kuksa-Anastasiya/img/flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+              <img src="../FE36-Landing-Kuksa-Anastasiya/img/alex-au-yang-vHN-d_oq2WY-unsplash.jpg" alt="img">
             </div>
             <div class="descriptoin">
               <span class="name">Jeremy H.</span>
@@ -165,7 +165,7 @@
         </div>
           <div class="reviews__description">
             <div class="reviews__img">
-              <img src="../flowers-romashki-belie-polyana-leto-nastroenie-92002.jpeg" alt="img">
+              <img src="../FE36-Landing-Kuksa-Anastasiya/img/alex-au-yang-vHN-d_oq2WY-unsplash.jpg" alt="img">
             </div>
             <div class="descriptoin">
               <span class="name">Jeremy H.</span>
