--- a/index.html
+++ b/index.html
@@ -59,6 +59,35 @@
         </div>
       </div>
     </section>
+    <section class="tabs">
+      <div class="container">
+        <div class="wrap__tabs">
+          <div class="tabs__btn">
+            <div>
+            <button></button>
+            <button></button>
+            <button></button>
+            </div>
+          </div>
+          <div class="tabs__content">
+            <div class="tabs__content__item">
+              <div class="content__item">
+                <h2></h2>
+                <div>
+                  <p></p>
+                </div>
+                <button></button>
+              </div>
+              <div class="content__img">
+                <img src="#" alt="#">
+              </div>
+            </div>
+            <div class="tabs__content__item"></div>
+            <div class="tabs__content__item"></div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="main">
       <div class="container">
         <h2 class="title">Why this so awsome</h2>
