--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="header__wrap">
           <div class="logo">
-            <span class="ax">Ax <span class="it">It</span></span>
+            <span class="ax">Ax<span class="it">It</span></span>
             </div>
           <ul class="navigation__list">
             <li class="navigation__list--item" ><a href="https://www.collinsdictionary.com/dictionary/english/feature" class="feautures">feautures</a></li> 
@@ -29,6 +29,7 @@
       <div class="container">
         <div class="axit__wrap">
           <div class="axit__modern__wrap">
+            <span class="ax__it">ax</span>
             <h1 class="axit__title">Modern axure template for beautifull prototypes</h1>
             <div class="axit__text">
               <p>
@@ -62,28 +63,30 @@
     <section class="tabs">
       <div class="container">
         <div class="wrap__tabs">
-          <div class="tabs__btn">
-            <div>
-            <button></button>
-            <button></button>
-            <button></button>
+          <div class="tabs__btn__wrap">
+            <div class="tabs__btn">
+            <button type="button" class="btn__tabs__first">Tabs 1</button>
+            <button type="button" class="btn__tabs__second">Tabs 2</button>
+            <button type="button" class="btn__tabs__third">Tabs 3</button>
             </div>
           </div>
           <div class="tabs__content">
             <div class="tabs__content__item">
               <div class="content__item">
-                <h2></h2>
-                <div>
-                  <p></p>
+                <h2 class="tabs__content__title">Tabs with soft transitioning effect.</h2>
+                <div class="tabs__content__text">
+                  <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.
+
+                  Lorem ipsum dolor sit amet, consectetu adipiscing elit. Aenean euismod bibendum laoreet.</p>
                 </div>
-                <button></button>
+                <button type="button" class="btn__tabs__content">Download</button>
               </div>
               <div class="content__img">
-                <img src="#" alt="#">
+                <img src="./img/image_right_u255@1X 1.png" alt="#">
               </div>
             </div>
-            <div class="tabs__content__item"></div>
-            <div class="tabs__content__item"></div>
+            <div class="tabs__content__item2"></div>
+            <div class="tabs__content__item3"></div>
           </div>
         </div>
       </div>
@@ -295,15 +298,15 @@
         <div class="wrap__contactUs">
           <form class="contactUs__content">
             <div class="left__content">
-              <div class="content__user__name">
+              <div class="content__user">
                 <label for="contactUserName" class="contact__user__name">Name</label>
-                <input type="text" name="UserName" required maxlength="15" minlength="8" id="contactUserName">
+                <input type="text" name="UserName" required maxlength="15" minlength="8" id="contantUserName">
               </div >
-                <div class="content__user__email"> 
+                <div class="content__user"> 
                   <label for="userEmail" class="contact__user__email">Email</label>
                 <input type="email" name="userEmail" required id="contactUserEmail">
                 </div>
-               <div class="content__user__password">
+               <div class="content__user">
                 <label for="contact__user__password" class="contact__user__password">Password</label>
                 <input type="password" name="userPassword" required id="contact__user__password">
               </div>
