--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
           </div>
         </div>
-        <div class="main__wrap">
+        <div class="card">
             <div сlass="card__content">
               <div class="card__img">
                 <img src="./img/keyboard.png" alt="keyboard" />
